--- a/03. DOM Exercise/05. Notification.html
+++ b/03. DOM Exercise/05. Notification.html
@@ -60,7 +60,14 @@
 </div>
 <script>
     function notify(message) {
+        let div = document.getElementById('notification')
 
+        div.textContent = message
+        div.style.display = 'block'
+
+        setTimeout(()=> {
+            div.style.display = 'none'
+        }, 2000)
     }
 </script>
 </body>
